Fix Alberta dealers table to add scroll bar on narrow screens

--- a/docs/resources/css/dealers.css
+++ b/docs/resources/css/dealers.css
@@ -33,6 +33,16 @@
     min-width: 625px;
     margin-bottom: 0;
   }
+
+  .ab-dealers {
+    overflow-x: auto !important;
+    margin-bottom: 20px;
+  }
+
+  .ab-table {
+    min-width: 625px;
+    margin-bottom: 0;
+  }
 }
 
 @media only screen and (max-width: 568px) {
